--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
             </div>
             <div class="w-full lg:w-1/2">
                 <div class="flex justify-center items-center py-5">
-                    <img class="w-full" src="/banner1.png" alt="">
+                    <img class="w-full" src="banner1.png" alt="">
                 </div>
                 <div class="flex justify-center items-center pt-5">
-                    <img class="w-full" src="/banner2.jpg" alt="">
+                    <img class="w-full" src="banner2.jpg" alt="">
                 </div>
             </div>
             <div class="w-full lg:w-1/4 px-2">
