--- a/index.html
+++ b/index.html
@@ -5,26 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Document</title>
+    <title>DSVN</title>
 </head>
 
 <body class="bg-[#F0F1F3]">
     <!-- header -->
-    <div class="bg-[#008ACB] h-24 flex items-end pb-2 px-70">
-        <img src="https://dsvn.vn/images/LOGO_n.png" alt="">
-        <div class="">
-            <h1 id="dateDisplay" class="text-white">today</h1>
+    <div class="bg-[#008ACB] flex items-end justify-between pb-2 px-4 lg:px-70">
+        <div class="flex items-end">
+            <img src="https://dsvn.vn/images/LOGO_n.png" alt="" class="h-12 lg:h-full">
+            <div class="hidden lg:block">
+                <h1 id="dateDisplay" class="text-white">today</h1>
+            </div>
         </div>
+        <!-- Hamburger button for small screens -->
+        <button id="menuToggle" class="lg:hidden text-white focus:outline-none cursor-pointer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="3" y1="12" x2="21" y2="12"></line>
+                <line x1="3" y1="6" x2="21" y2="6"></line>
+                <line x1="3" y1="18" x2="21" y2="18"></line>
+            </svg>
+        </button>
     </div>
 
-    <!-- nav -->
-    <div id="nav" class="mt-5 bg-[#008ACB] h-12 flex items-center flex justify-center"></div>
+    <!-- Side menu for small screens -->
+    <div id="sideMenu"
+        class="fixed inset-y-0 left-0 w-64 bg-[#008ACB] transform -translate-x-full transition-transform duration-300 ease-in-out lg:hidden z-50">
+        <div class="flex justify-between items-center p-4">
+            <h2 class="text-white font-bold">Menu</h2>
+            <button id="closeMenu" class="text-white focus:outline-none cursor-pointer">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
+            </button>
+        </div>
+        <div id="sideNav" class="flex flex-col gap-4 p-4 text-white"></div>
+    </div>
+
+    <!-- nav (visible on lg screens) -->
+    <div id="nav" class="mt-5 bg-[#008ACB] h-12 hidden lg:flex items-center justify-center"></div>
 
     <!-- content -->
-
-    <div class="bg-white w-[80%] mx-auto relative">
-        <div class=" flex flex-col lg:flex-row">
-            <div class="w-full lg:w-1/4 px-2">
+    <div class="bg-white w-full lg:w-[80%] mx-auto relative">
+        <div class="flex flex-col lg:flex-row">
+            <div class="order-2 lg:order-1 w-full lg:w-1/4 px-2">
                 <div class="border border-[#CCCCCC] mt-5">
                     <div class="bg-[#CCCCCC] flex items-center justify-center py-1">
                         <div class="text-[#0091d4] mt-1 mr-1">
@@ -57,7 +83,6 @@
                         <div>
                             <input type="radio" name="way" id="" class="cursor-pointer">
                             <label for="">Một chiều</label>
-
                             <input type="radio" name="way" id="" class="ml-5 cursor-pointer">
                             <label for="">Khứ hồi</label>
                         </div>
@@ -114,17 +139,15 @@
                         <button class="bg-[#008ACB] text-white p-1 mx-auto">Tìm kiếm</button>
                     </div>
                 </div>
-
                 <div class="mt-5">
                     <h1 class="border border-[#CCCCCC] font-bold font-[14px] text-[#0091d4] p-2">Khai trương tàu du lịch
                         kết nối di sản Huế - Đà Nẵng</h1>
                 </div>
-
-                <div class="mt-5 flex items-center justify-center">
+                <div class="mt-5 flex items-center justify-center hidden lg:block">
                     <img class="w-full" src="https://dsvn.vn/images/tau-du-lich-hue-da-nang.jpg" alt="">
                 </div>
             </div>
-            <div class="w-full lg:w-1/2">
+            <div class="order-1 lg:order-2 w-full lg:w-1/2">
                 <div class="flex justify-center items-center py-5">
                     <img class="w-full" src="banner1.png" alt="">
                 </div>
@@ -132,7 +155,7 @@
                     <img class="w-full" src="banner2.jpg" alt="">
                 </div>
             </div>
-            <div class="w-full lg:w-1/4 px-2">
+            <div class="order-3 lg:order-3 w-full lg:w-1/4 px-2">
                 <div class="border border-[#CCCCCC] mt-5">
                     <div class="bg-[#CCCCCC] flex items-center justify-center py-1">
                         <div class="text-[#0091d4] mt-1 mr-1">
@@ -156,7 +179,6 @@
                         <h1 class="text-[#e55a05] font-bold text-center py-2">Chưa có vé</h1>
                     </div>
                 </div>
-
                 <div class="border border-[#CCCCCC] mt-5">
                     <h1 class="font-bold font-[14px] text-[#0091d4] py-2 text-center">Kết nối với chúng tôi</h1>
                     <div class="flex items-center justify-center">
@@ -168,9 +190,7 @@
                     <div class="flex items-center justify-center py-2">
                         <img src="https://dsvn.vn/images/banner-vr.com.vn.png" alt="">
                     </div>
-
                 </div>
-
                 <div class="border border-[#CCCCCC] mt-5">
                     <h1 class="font-bold font-[14px] text-[#0091d4] py-1 text-center">Tổng đài Hà Nội</h1>
                     <div class="flex flex-row px-5 justify-between pb-2">
@@ -179,7 +199,6 @@
                         <img class="h-10" src="https://dsvn.vn/images/phone-hn.png" alt="">
                     </div>
                 </div>
-
                 <div class="border border-[#CCCCCC] mt-5">
                     <h1 class="font-bold font-[14px] text-[#0091d4] py-1 text-center">Tổng đài Hà Nội</h1>
                     <div class="flex flex-row px-5 justify-between pb-2">
@@ -188,27 +207,22 @@
                         <img class="h-10" src="https://dsvn.vn/images/phone-hn.png" alt="">
                     </div>
                 </div>
-
                 <div class="border border-[#CCCCCC] mt-5 px-2">
                     <h1 class="font-bold font-[14px] text-[#0091d4] py-1 text-center">Tra cứu hoá đơn</h1>
                     <p class="text-center text-[#0091d4]">Để tra cứu hóa đơn điện tử, quý khách hàng vui lòng <a href=""
                             class="underline hover:font-bold">bấm vào đây</a></p>
                 </div>
-
                 <div class="border border-[#CCCCCC] mt-5 p-2 flex flex-col items-center justify-center">
                     <h1 class="font-bold font-[14px] text-[#0091d4] pb-2 text-center">Hành trình tàu thực tế</h1>
                     <img src="https://dsvn.vn/images/icon-time-table.png" alt="">
                 </div>
-
             </div>
         </div>
-
         <div class="bg-[#d9edf7] border border-[#bce8f1] p-2 rounded-lg w-[95%] mx-auto my-5">
-            <a href="" class="text-[#3a87ad] hover:underline font-bold ml-5 text-[14px] my-2">
+            <a href="" class="text-[#3a87ad] hover:underline font-bold lg:text-[14px] text-[12px] my-2">
                 CHÍNH SÁCH GIÁ VÉ, QUY ĐỊNH ĐỔI – TRẢ VÉ TÀU VÀ HƯỚNG DẪN TẢI HÓA ĐƠN VÉ TÀU HỎA – NĂM 2025
             </a>
         </div>
-
         <div class="flex flex-col py-5 text-center gap-2">
             <h1>Tải ứng dụng</h1>
             <div class="flex items-center justify-center">
@@ -216,16 +230,15 @@
                 <img class="h-[40px] cursor-pointer" src="https://dsvn.vn/images/playstore.png" alt="">
             </div>
         </div>
-
-        <div class="bg-[#CCCCCC] flex flex-col gap-2 py-2 mt-5">
+        <div class="bg-[#CCCCCC] flex flex-col gap-2 py-2 mt-5 hidden lg:block">
             <div id="mini-nav" class="flex items-center justify-center"></div>
             <div id="policy" class="flex items-center justify-center"></div>
         </div>
-
         <div class="text-center py-10">
             <h1>Tổng công ty Đường sắt Việt Nam. Số 118 đường Lê Duẩn, Phường Văn Miếu - Quốc Tử Giám, Thành phố Hà Nội,
                 Việt Nam.</h1>
-            <p class="text-[#af3f3f] mt-5">Giấy chứng nhận ĐKKD số 113642 theo QĐ thành lập số 973/QĐ-TTg ngày 25/06/2010 của Thủ tướng Chính phủ.
+            <p class="text-[#af3f3f] mt-5">Giấy chứng nhận ĐKKD số 113642 theo QĐ thành lập số 973/QĐ-TTg ngày
+                25/06/2010 của Thủ tướng Chính phủ.
                 <br>
                 Mã số doanh nghiệp: 0100105052, đăng ký lần đầu ngày 26/07/2010, đăng ký thay đổi lần 4 ngày 27/06/2014
                 tại Sở KHĐT Thành phố Hà Nội.
@@ -246,25 +259,49 @@
         document.getElementById('dateDisplay').textContent = formatDate();
 
         function renderNav() {
-            const items = ["Tìm vé", "Thông tin đặt chỗ", "trả vé", "kiểm tra vé", "giờ tàu - giá vé", "khuyến mãi", "các quy định", "hướng dẫn", "liên hệ"]
-            const nav = document.getElementById('nav')
-            nav.innerHTML = items.map(item => `<div class="px-5 text-white uppercase cursor-pointer">${item}</div>`).join('')
+            const items = ["Tìm vé", "Thông tin đặt chỗ", "trả vé", "kiểm tra vé", "giờ tàu - giá vé", "khuyến mãi", "các quy định", "hướng dẫn", "liên hệ"];
+            const nav = document.getElementById('nav');
+            const sideNav = document.getElementById('sideNav');
+            const navContent = items.map(item => `<div class="px-5 text-white uppercase cursor-pointer hover:bg-[#006b9b]">${item}</div>`).join('');
+            const sideNavContent = items.map(item => `<div class="px-5 text-white capitalize cursor-pointer hover:bg-[#006b9b]">${item}</div>`).join('');
+            nav.innerHTML = navContent;
+            sideNav.innerHTML = sideNavContent;
         }
-        renderNav()
+        renderNav();
 
         function renderMiniNav() {
-            const items = ["Tìm vé", "Thông tin đặt chỗ", "giờ tàu - giá vé", "hướng dẫn", "liên hệ"]
-            const nav = document.getElementById('mini-nav')
-            nav.innerHTML = items.map(item => `<div class="px-5 text-[#0091d4] capitalize">${item}</div>`).join('')
+            const items = ["Tìm vé", "Thông tin đặt chỗ", "giờ tàu - giá vé", "hướng dẫn", "liên hệ"];
+            const nav = document.getElementById('mini-nav');
+            nav.innerHTML = items.map(item => `<div class="px-5 text-[#0091d4] capitalize">${item}</div>`).join('');
         }
-        renderMiniNav()
+        renderMiniNav();
 
         function renderPolicy() {
-            const items = ["mua hàng", "thanh toán", "hoàn trả", "bảo mật thông tin"]
-            const nav = document.getElementById('policy')
-            nav.innerHTML = items.map(item => `<div class="px-5 text-[#0091d4]">Chính sách ${item}</div>`).join('')
+            const items = ["mua hàng", "thanh toán", "hoàn trả", "bảo mật thông tin"];
+            const nav = document.getElementById('policy');
+            nav.innerHTML = items.map(item => `<div class="px-5 text-[#0091d4]">Chính sách ${item}</div>`).join('');
         }
-        renderPolicy()
+        renderPolicy();
+
+        // Toggle side menu
+        const menuToggle = document.getElementById('menuToggle');
+        const closeMenu = document.getElementById('closeMenu');
+        const sideMenu = document.getElementById('sideMenu');
+
+        menuToggle.addEventListener('click', () => {
+            sideMenu.classList.toggle('-translate-x-full');
+        });
+
+        closeMenu.addEventListener('click', () => {
+            sideMenu.classList.add('-translate-x-full');
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', (event) => {
+            if (!sideMenu.contains(event.target) && !menuToggle.contains(event.target)) {
+                sideMenu.classList.add('-translate-x-full');
+            }
+        });
     </script>
 </body>
 
